--- a/game.css
+++ b/game.css
@@ -29,7 +29,7 @@ body
 {
 background: white;
 border-radius: 10px;
-border-top: 10px solid #e3f309;
+border-top: 10px solid #f36bff;
 padding: 10px;
 float: none;
 text-align: left;
